// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`courses refresher ignores student courses for teacher app 1`] = `
Array [
  Object {},
  Object {
    "1": Object {
      "announcements": Object {
        "pending": 0,
        "refs": Array [],
      },
      "assignmentGroups": Object {
        "pending": 0,
        "refs": Array [],
      },
      "attendanceTool": Object {
        "pending": 0,
      },
      "color": "#fff",
      "course": Object {
        "course_code": "rn 101",
        "default_view": "wiki",
        "enrollments": Array [
          Object {
            "enrollment_state": "active",
            "role": "TeacherEnrollment",
            "role_id": "1",
            "type": "teacher",
            "user_id": "1",
          },
        ],
        "id": "1",
        "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
        "is_favorite": true,
        "name": "Learn React Native",
        "short_name": "rn",
        "term": Object {
          "name": "Default Term",
        },
      },
      "discussions": Object {
        "pending": 0,
        "refs": Array [],
      },
      "enrollments": Object {
        "pending": 0,
        "refs": Array [],
      },
      "groups": Object {
        "pending": 0,
        "refs": Array [],
      },
      "pending": 0,
      "quizzes": Object {
        "pending": 0,
        "refs": Array [],
      },
      "tabs": Object {
        "pending": 0,
        "tabs": Array [],
      },
    },
  },
]
`;

exports[`courses refresher includes all courses for student app 1`] = `
Array [
  Object {},
  Object {
    "1": Object {
      "announcements": Object {
        "pending": 0,
        "refs": Array [],
      },
      "assignmentGroups": Object {
        "pending": 0,
        "refs": Array [],
      },
      "attendanceTool": Object {
        "pending": 0,
      },
      "color": "#fff",
      "course": Object {
        "course_code": "rn 101",
        "default_view": "wiki",
        "enrollments": Array [
          Object {
            "enrollment_state": "active",
            "role": "TeacherEnrollment",
            "role_id": "1",
            "type": "teacher",
            "user_id": "1",
          },
        ],
        "id": "1",
        "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
        "is_favorite": true,
        "name": "Learn React Native",
        "short_name": "rn",
        "term": Object {
          "name": "Default Term",
        },
      },
      "discussions": Object {
        "pending": 0,
        "refs": Array [],
      },
      "enrollments": Object {
        "pending": 0,
        "refs": Array [],
      },
      "groups": Object {
        "pending": 0,
        "refs": Array [],
      },
      "pending": 0,
      "quizzes": Object {
        "pending": 0,
        "refs": Array [],
      },
      "tabs": Object {
        "pending": 0,
        "tabs": Array [],
      },
    },
    "991": Object {
      "announcements": Object {
        "pending": 0,
        "refs": Array [],
      },
      "assignmentGroups": Object {
        "pending": 0,
        "refs": Array [],
      },
      "attendanceTool": Object {
        "pending": 0,
      },
      "color": "#ffc100",
      "course": Object {
        "course_code": "rn 101",
        "default_view": "wiki",
        "enrollments": Array [],
        "id": 991,
        "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
        "is_favorite": true,
        "name": "Learn React Native",
        "short_name": "rn",
        "term": Object {
          "name": "Default Term",
        },
      },
      "discussions": Object {
        "pending": 0,
        "refs": Array [],
      },
      "enrollments": Object {
        "pending": 0,
        "refs": Array [],
      },
      "groups": Object {
        "pending": 0,
        "refs": Array [],
      },
      "pending": 0,
      "quizzes": Object {
        "pending": 0,
        "refs": Array [],
      },
      "tabs": Object {
        "pending": 0,
        "tabs": Array [],
      },
    },
  },
]
`;
